[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
fake = "2.5"
rand = "0.8"
itertools = "0.10.5"

[dependencies]
quic-client = { path = "../quic-client" }
tokio = { version = "1.26.0", features = ["macros", "rt"] }
futures = "0.3.26"
env_logger = "0.10.0"
log = "0.4"
net = { path = "../net" }
uhlc = "0.5"

[[bench]]
name = "server"
harness = false
