[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path = "../net" }
tokio = { version = "1.26.0", features = ["macros", "rt"] }
futures = "0.3.26"
env_logger = "0.10.0"
num_cpus = "1"
core_affinity = "0.8"
log = "0.4.17"
s2n-quic = "1"
bytes = "1"
# tracing-log = { version = "0.1", features = ["env_logger"]}
tracing = { version = "0.1", features = ["log"] }
