[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.17"
tokio = { version = "1.26", features = ["full"] }
log = "0.4"
futures = "0.3"
env_logger = "0.10"
thiserror = "1"
net = { path = "../net" }
bytes = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
mdns-sd = "0.7.1"
uhlc = "0.6"
clap = { version = "4.2", features = ["derive"] }

[build-dependencies]
capnpc = "0.17"
