[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4"
rocksdb = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.4.0"
thiserror = "1"
tracing = "0.1"
uhlc = "0.5.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
