[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
libp2p = { version = "0.51.0", features = ["ping", "tokio", "tcp", "dns", "macros", "websocket", "noise", "mplex", "yamux", "mdns", "request-response"] }
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["io-std", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
void = "1.0.2"
consistent_hash_ring = "0.8.0"
async-trait = "0.1.66"
bincode = "1.3.3"
serde = { version = "1.0.154", features = ["derive"] }
log = "0.4.17"
thiserror = "1"
capnp = "0.16"
s2n-quic = { version = "1", features = ["provider-event-tracing"]}
bytes = "1"

[build-dependencies]
capnpc = "0.16"
