[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["io-std", "sync"] }
log = "0.4"
thiserror = "1"
capnp = "0.16"
bytes = "1"

[build-dependencies]
capnpc = "0.16"
