[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1"
futures = "0.3"
log = "0.4"
thiserror = "1"
bytes = "1"
tokio = { version = "1.26", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
tracing = "0.1"
uhlc = "0.5"
yamux = "0.11"
