[package]
name = "quic-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.16"
s2n-quic = "1"
tokio = { version = "1.26", features = ["full"] }
log = "0.4"
futures = "0.3"
env_logger = "0.10"
thiserror = "1"
quic-transport = { path = "../quic-transport" }
bytes = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
mdns-sd = "0.7.1"

[build-dependencies]
capnpc = "0.16"
