[package]
name = "quic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1"
tokio = { version = "1.26.0", features = ["full"] }
mdns-sd = "0.7.1"
bytes = "1"
local-ip-address = "0.5.1"
rand = "0.8"
consistent_hash_ring = "0.8.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
thiserror = "1"
net = { path = "../net" }
db = { path = "../db" }
core_affinity = "0.8.0"
log = "0.4.17"
