[package]
name = "quic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
mdns-sd = "0.7.1"
bytes = "1"
local-ip-address = "0.5.1"
rand = "0.8"
consistent_hash_ring = "0.8.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
thiserror = "1"
core_affinity = "0.8.0"
log = "0.4"
futures = "0.3"
env_logger = "0.10"
db = { path = "../db" }
quic-transport = { path = "../quic-transport" }
quic-client = { path = "../quic-client" }
capnp = "0.16"

[build-dependencies]
capnpc = "0.16"
