[package]
name = "quic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2n-quic = "1"
s2n-quic-core = "0.19"
s2n-quic-platform = "0.20"
monoio = "0.1.2"
local-sync = "0.1.0"
mdns-sd = "0.7.1"
bytes = "1"
local-ip-address = "0.5.1"
rand = "0.8"
consistent_hash_ring = "0.8.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
thiserror = "1"
core_affinity = "0.8.0"
log = "0.4"
futures = "0.3"
env_logger = "0.10"
db = { path = "../db" }
quic-transport = { path = "../quic-transport" }
quic-client = { path = "../quic-client" }
capnp = "0.16"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
itertools = "0.10"
async-trait = "0.1"
uhlc = "0.5"
clap = { version = "4.2", features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
capnpc = "0.16"
