[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1"
capnp = "0.17"
clap = { version = "4.2", features = ["derive"] }
client = { path = "../client" }
consistent_hash_ring = "0.8.0"
core_affinity = "0.8.0"
db = { path = "../db" }
env_logger = "0.10"
futures = "0.3"
local-ip-address = "0.5.1"
log = "0.4"
mdns-sd = "0.7.1"
net = { path = "../net" }
rand = "0.8"
tempfile = "3.4.0"
thiserror = "1"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
uhlc = "0.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}

[build-dependencies]
capnpc = "0.17"
